2004-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* NEWS: Updated.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.

2004-03-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Updated dependencies for Ruby/Libgda.
	* NEWS: Updated.

2004-03-14  Dafydd Harries <daf@muse.19inch.net>

	* exec_make.rb: exit with 1 when failure occurred.

2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Updated.
	* extconf.rb: Remove debug code.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Add atk as prior library.
	* README: Update Copyright.

2004-03-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Modified.
	
2004-02-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Add information of Ruby/ATK.
	* AUTHORS: ditto.

2004-02-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Correct ruby path.

2003-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* README: Ruby/Libgda needs libgda 1.1.1 (development branch).

2003-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Updated.

2003-11-22  Laurent Sansonetti  <lrz@gnome.org>
                                                                                
	* README: libgda 1.0.2 or newer is needed for Ruby/Libgda.

2003-11-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Modified.

2003-11-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* AUTHORS: Modified.

2003-09-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* exec_make.rb: don't use parenthesis in the argument of system()
	for mingw32 support.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* AUTHORS: Modified.
	* exec_make.rb: Added
	* extconf.rb: Improved. 
	If the libraries are not found, they're ignored.
	And you can specify to target libraries.

2003-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Updated.
	* AUTHORS: Modified.

2003-07-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Updated.

2003-07-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Modified.
