@@ -1,3 +1,12 @@
+Ruby-GNOME2-0.10.1 (2004-08-16)
+
+  * Ruby/GdkPixbuf [Masao Mutoh]
+     - Fix bugs.
+  * Ruby/GTK [Masao Mutoh]
+     - Support GTK+-2.0.x again.
+  * Ruby/GtkSourceView [Masao Mutoh]
+     - Fix bugs.
+
 Ruby-GNOME2-0.10.0 (2004-08-09)
 
   * Ruby/GLib [Masao Mutoh]
